<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_add_48"
            android:title="@string/teams_menu_label" />
        <item
            android:id="@+id/nav_portfolio"
            android:icon="@drawable/ic_portfolio_48"
            android:title="@string/match_menu_label" />
    </group>

    <item android:title="@string/setting">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile_48"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_48"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
